--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/GTeeee/automation-qwteststore#readme",
   "devDependencies": {
+    "@wdio/cli": "^7.16.14",
     "@wdio/dot-reporter": "^7.16.14",
     "@wdio/local-runner": "^7.16.14",
     "@wdio/mocha-framework": "^7.16.14",
@@ -27,8 +28,5 @@
     "mocha": "^9.2.0",
     "wdio-chromedriver-service": "^7.2.6",
     "webdriverio": "^7.16.14"
-  },
-  "dependencies": {
-    "@wdio/cli": "^7.16.14"
   }
 }
